# We-Are-Cooking

./: .gitignore  LICENSE  README.md  gitflow.md  startup.sh
documentation/: WRC-openapi-swagger.yaml  gitflow.md
documentation/database_docs/: Database-online-links.md  Database-online-links.txt
infrastructure/: .env  compose.dev.db.yaml  compose.dev.infra.yaml  compose.dev.services.yaml  compose.env  compose.yaml
infrastructure/keycloak/: compose.dev.yaml  path.txt  xd.txt
infrastructure/realms/: relm-export.json
scripts/: build.sh  start-infra.sh  start-services.sh  startup.sh  windows-start-infra.sh
services/RecipesAPI/: README.md
services/frontend/: Dockerfile  (+2 more)
services/reels/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.release.yaml  config.yaml
services/reels/migrations/: 20250419110617_create_reels_table.sql
services/reels/scripts/: init_db.sh
services/reels/src/: config.rs  lib.rs  main.rs  openapi.rs  startup.rs
services/reels/src/controller/: health_controller.rs  mod.rs  reel_controller.rs  video_controller.rs
services/reels/src/dao/: database_context.rs  mod.rs  reel_dao.rs  video_dao.rs
services/reels/src/error/: error.rs
services/reels/src/model/: mod.rs  post_video.rs  reel.rs  video.rs
services/reels/src/model/health/: health_response.rs  mod.rs
services/reels/src/model/reel/: mod.rs  post_reel.rs  reel.rs
services/reels/src/model/reel_with_videos/: mod.rs  reel_with_videos.rs
services/reels/src/model/video/: mod.rs  post_video.rs  video.rs
services/reels/src/service/: mod.rs  reel_service.rs  video_service.rs
services/reels/src/util/: read_bytes.rs
(+461 files in other folders)
