[package]
name = "reels_microservice"
version = "0.1.0"
edition = "2024"
authors = ["Maciej Grzesik"]

[dependencies] 
actix-rt = "2.10.0"
actix-web = "4.10.2"
config = "0.15.11"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }
env_logger = "0.11.8"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
log = "0.4.27"
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
async-trait = "0.1.88"
tokio = "1.44.2"
bytes = "1.10.1"
thiserror = "2.0.12"
actix-files = "0.6.6"
